file_processor/dist/k8s/k8s_file_processor_deploy_def.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: file-processor
  name: file-processor-deploy
  namespace: k8-test-data
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: file-processor
  template:
    metadata:
      labels:
        app: file-processor
    spec:
      containers:
      - name: file-processor-pod
        image: karthyuom/k8-file-processor:1.0.22 #TODO: To be updated based on the docker registry and the image version
        env: #TODO: Update the below settings when necessary
        - name: MQ_HOST
          value: rabbitmq
        - name: MQ_QUEUE
          value: queue01
        - name: PYTHONUNBUFFERED
          value: "0"
        - name: MINIO_URL
          value: 192.168.99.1:9001
        - name: MINIO_ACCESS_KEY
          value: "minio1"
        - name: MINIO_SECRET_KEY
          value: "minio1@123"
        - name: vs_zip_pwd
          value: "infected"
        - name: virustotal_url
          value: https://www.virustotal.com/vtapi/v2/
        - name: virustotal_key
          value: ""
        - name: "s3_sync_api"
          value: "http://s3-sync-svc.k8-test-data.svc.cluster.local:5004/tos3"
        - name: "rebuild_api"
          value: "http://glasswall-rebuild-svc.k8-test-data.svc.cluster.local:5003/process"
        ports:
        - containerPort: 5000
          protocol: TCP
---


kind: Service
apiVersion: v1
metadata:
  name: file-processor-svc
  namespace: k8-test-data
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: file-processor
