file_processor/dist/k8s/k8s_file_processor_ingress_def.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: file-processor-ingress
  namespace: k8-test-data
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /fprocapi/?(.*)
        backend:
          serviceName: file-processor-svc
          servicePort: 5000
